# nxcmdr

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.macosx  LICENSE  README.md  docker-compose.yml  pyproject.toml
crates/bitwarden_service/: Cargo.toml
crates/bitwarden_service/src/: auth.rs  constants.rs  lib.rs  models.rs  service.rs  store.rs  sync.rs  utils.rs
crates/security/: Cargo.toml
crates/security/src/: crypt.rs  models.rs
docs/: crypto_notebook.ipynb
nx_core/: Cargo.toml  pyproject.toml
nx_core/crates/bitwarden_service/: Cargo.toml
nx_core/crates/bitwarden_service/src/: auth.rs  constants.rs  lib.rs  models.rs  store.rs  sync.rs  utils.rs
nx_core/crates/nx_core_interface/: Cargo.toml
nx_core/crates/nx_core_interface/src/: lib.rs
nx_core/crates/security/: Cargo.toml
nx_core/crates/security/src/: crypt.rs  lib.rs  models.rs
nxcmdr/: __main__.py  cli.py  printers.py
nxcmdr/docs/: examples.http
src/: env.rs  lib.rs  main.rs  models.rs
