[tool.poetry]
name = "nxcmdr"
version = "0.1.0"
description = "A cli application to run applications with env vars from .env files or Bitwarden secure notes."
authors = ["xyder <xyder@dsider.org>"]

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/22063064/packages/pypi/simple"

[tool.poetry.dependencies]
python = "^3.8"
plumbum = "^1.6.9"
python-dotenv = "^0.14.0"
nx-core = "^0.1.0"

[tool.poetry.dev-dependencies]
maturin = "^0.8.3"
pylint = "^2.6.0"
ipdb = "^0.13.4"
twine = "^3.2.0"

[tool.poetry.scripts]
nxc = 'nxcmdr.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
