[tool.poetry]
name = "nx_core"
version = "0.1.0"
description = ""
authors = ["xyder <xydr2311@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
maturin = "^0.8.3"

[build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"

requires = ["maturin"]
build-backend = "maturin"
