[package]
name = "bitwarden_service"
version = "0.1.1"
authors = ["xyder <xyder@dsider.org>"]
edition = "2018"

[dependencies]
reqwest = {version = "^0.10", features = ["json", "blocking"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0.58"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = {version = "0.8.1", features = ["serde", "v4"]}
rpassword = "5.0"
base64 = "0.13.0"
anyhow = "1.0.34"
security = {version = "0.1.1", path = "../security"}
