[package]
name = "security"
version = "0.1.0"
authors = ["xyder <xyder@dsider.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "^0.16"
base64 = "0.13.0"
openssl = "0.10.30"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0.58"
rand_core = "0.5.1"
