[package]
name = "security"
version = "0.1.1"
authors = ["xyder <xyder@dsider.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0.58"
rand_core = "0.5.1"

# RustCrypto libs
pbkdf2 = {version = "0.6.0", default-features = false }
sha2 = "0.9.2"
hmac = "0.10.1"
block-modes = "0.7.0"
aes = "0.6.0"
