[package]
name = "bitwarden_service"
version = "0.1.0"
authors = ["xyder <xyder@dsider.org>"]
edition = "2018"

[dependencies]
reqwest = {version = "^0.10", features = ["json"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0.58"
chrono = "0.4.19"

security = {version = "0.1.0", path = "../security"}
