[package]
name = "nx_core_interface"
version = "0.1.0"
authors = ["xyder <xyder@dsider.org>"]
edition = "2018"

[lib]
name = "nx_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# needs to be 0.2+ for compatibility with reqwest
tokio = {version = "^0.2", features = ["full"]}
bitwarden_service = {version = "0.1.0", path = "../bitwarden_service"}

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
